Logbook Changelog
=================

Not yet released

- Use correct record delimiters (null for UNIX, newline for network) in SyslogHandler (thanks Jonathan Kamens)
- Try to reconnect to SyslogHandler TCP sockets when they are disconnected (thanks Jonathan Kamens)

Here you can see the full list of changes between each Logbook release.

Version 1.4.1

Released on October 14th, 2018

- Fixed deprecated regular expression pattern (thanks Tsuyoshi Hombashi)
- Fixed TimedRotatingFileHandler rotation (thanks Tucker Beck)

Version 1.4.0
-------------

Released on May 15th, 2018

- Added support for checking if trace logs have been emitted in TestHandler (thanks @thedrow)


Version 1.3.0
-------------

Released on March 5th, 2018

- Added support for controlling rotating file names -- Logbook now allows users to customize the formatting of rollover/rotating files (thanks Tucker Beck)

Version 1.2.0
-------------

Released on February 8th, 2018

- Added support for compressed log files, supporting both gzip and brotli compression methods (thanks Maor Marcus)
- Fixed CPU usage for queuing handlers (thanks Adam Urbańczyk)


Version 1.1.0
-------------

Released on July 13th 2017

- Added a handler for Riemann (thanks Šarūnas Navickas)
- Added a handler for Slack (thanks @jonathanng)
- Colorizing mixin can now force coloring on or off (thanks @ayalash)


Version 1.0.1
-------------

- Fix PushOver handler cropping (thanks Sébastien Celles)


VERSION 1.0.0
-------------

Released on June 26th 2016

- Added support for timezones for log timestamp formatting (thanks Mattijs Ugen)
- Logbook has been a 0.x long enough to earn its 1.0.0 bump!
- Logbook now uses SemVer for its versioning scheme
- Various improvements to MailHandler and the usage of TLS/SMTP SSL (thanks Frazer McLean)
- Fix log colorizing on Windows (thanks Frazer McLean)
- Coverage reports using coveralls.io